<resources>
    <string name="app_name">TestWeather</string>
    <string name="btn_add_city">Add city</string>
    <string name="alert_title">New city</string>
    <string name="alert_hint">Name</string>
    <string name="degrees_celsius">°C</string>
    <string name="city">City name</string>
    <string name="title_temp">Temperature:</string>
    <string name="titile_pressure">Pressure :</string>
    <string name="title_humidity">Humidity:</string>
    <string name="titleSpeed">Wind speed:</string>
    <string name="loading">Loading…</string>
    <string name="forecast3">3 day forecast</string>
    <string name="forecast5">5 day forecast</string>
    <string name="remove_from_list">Remove</string>
    <string name="gap">-</string>
    <string name="back">Back</string>
</resources>
